--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ https://www.srbijasans.rs/ */
 Adapted from Skeleton by David Gamache
 https://github.com/dhg/Skeleton/blob/master/css/skeleton.css */
 
+/* Enabling smooth scrolling */
+html, body {
+    scroll-behavior: smooth;
+}
+
 /* Setting the base font size for the entire HTML document to 62.5%, 
 which sets 1rem to be approximately 10px 
 (since the default font-size for most browsers is 16px) */
@@ -23,6 +28,7 @@ html {
 /* Setting the base font size for the body to be 1.5em, 
 which is 15px here due to setting of html font-size to 62.5% */
 body {
+    display: grid;
     font-size: 1.5em;
     line-height: 1.6;
     font-weight: 400;
@@ -147,7 +153,7 @@ a:hover {
 
 /* Styling for menu button, including colour, uppercase text, 
 border, and background transparency */
-button {
+button#menu {
     color: #f9faf8;
     text-transform: uppercase;
     background-color: transparent;
@@ -672,3 +678,34 @@ within the wrapper to maintain consistent space between elements */
 .inner>* {
     gap: 3rem;
 }
+
+/* Styling the back-to-top button as a fixed, circular button 
+positioned at the bottom right of the viewport (initially invisible), 
+with transitions set for the opacity and background colour */
+#top {
+    opacity: 0;
+    position: fixed;
+    width: 6rem;
+    height: 6rem;
+    font-size: 2rem;
+    color: #f9faf8;
+    background-color: #3882f6;
+    border: none;
+    border-radius: 50%;
+    bottom: 6vw;
+    right: 6vw;
+    transition: opacity 0.5s ease, background-color 0.3s ease;
+    z-index: 3;
+}
+
+/* Styling back-to-top button when it has the 'visible' class (added by JavaScript), 
+increasing the opacity to make it slightly transparent */
+#top.visible {
+    opacity: 0.8;
+}
+
+/* Styling the back-to-top button when it's hovered over, making it fully visible. */
+#top:hover {
+    opacity: 1;
+}
+  
